--- a/.github/workflows/sync_submodules.yml
+++ b/.github/workflows/sync_submodules.yml
@@ -37,7 +37,8 @@ jobs:
       run: |
         if [[ -n $(git status --porcelain) ]]; then
           git add .
-          git commit -m "Update submodule references"
+          git commit -m "update: sync submodule references"
           git push origin main
+        if
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
