--- a/.github/workflows/sync_submodules.yml
+++ b/.github/workflows/sync_submodules.yml
@@ -27,9 +27,7 @@ jobs:
           pwd
           ls -la
           cd Gitlab
-          git remote add origin https://github.com/Sakuard/gitlab.git
-          # git pull --rebase origin main
-          git status
+          git remote -v
           # git add .
           # git commit -m "feat: submodules update sync"
           # git push origin main
