feat: submodule sync test

--- a/.github/workflows/sync_submodules.yml
+++ b/.github/workflows/sync_submodules.yml
@@ -31,6 +31,8 @@ jobs:
           git remote add gitlab https://github.com/Sakuard/gitlab.git
           git fetch gitlab
           git status
+          git rebase gitlab/main
+          git push gitlab main --force
           # git add .
           # git commit -m "feat: submodules update sync"
           # git push origin main
