--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "GitLab"]
 	path = GitLab
 	url = https://github.com/Sakuard/gitlab.git
+[submodule "k8s"]
+	path = k8s
+	url = https://github.com/Sakuard/k8s.git
